[project]
name = "fidsus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "calmsize>=0.1.3",
    "cvxpy>=1.7.5",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "opacus>=1.5.4",
    "pandas>=2.3.3",
    "portalocker>=3.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchtext>=0.18.0",
    "torchvision>=0.24.1",
    "ujson>=5.11.0",
]
